refactor: simplify PersonController, remove redundant endpoints and try/catch blocks